Kubernetes/gateway/order-processor-http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: order-processor-route
  namespace: order-processor
spec:
  parentRefs:
    - name: gateway
      sectionName: http
  hostnames:
    - "internal.foo.company"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /order
      backendRefs:
        - name: order-processor-service
          port: 80
